@@ -2022,7 +2022,8 @@ static int ldlm_chain_lock_for_replay(struct ldlm_lock *lock, void *closure)
         return LDLM_ITER_CONTINUE;
 }
 
-static int replay_lock_interpret(struct ptlrpc_request *req,
+static int replay_lock_interpret(const struct lu_env *env,
+                                 struct ptlrpc_request *req,
                                  struct ldlm_async_args *aa, int rc)
 {
         struct lustre_handle  old_hash_key;
@@ -2147,7 +2148,7 @@ static int replay_one_lock(struct obd_import *imp, struct ldlm_lock *lock)
         CLASSERT(sizeof(*aa) <= sizeof(req->rq_async_args));
         aa = ptlrpc_req_async_args(req);
         aa->lock_handle = body->lock_handle[0];
-        req->rq_interpret_reply = replay_lock_interpret;
+        req->rq_interpret_reply = (ptlrpc_interpterer_t)replay_lock_interpret;
         ptlrpcd_add_req(req);
 
         RETURN(0);
